<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_blue">
        <EditText
            android:id="@+id/edtInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"
            android:gravity="center_vertical|left"
            android:hint="@string/_0"
            android:inputType="text"
            android:padding="@dimen/dp5"
            android:textSize="@dimen/sp40" />

        <TextView
            android:id="@+id/tvOutput_result"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp80"
            android:gravity="center_vertical|right"
            android:textSize="@dimen/sp30"
            android:layout_below="@+id/edtInput"
            android:text="@string/result" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_button"
            android:layout_weight="1"
            android:text="(" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_button"
            android:layout_weight="1"
            android:text=")" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_button"
            android:layout_weight="1"
            android:text="@string/div" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="-" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btnCE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/clear_all" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/point" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grey_button"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>
